bpk-lib/crates/syncbat/tests/ui/operation_macro_unsafe_fn.stderr
error: #[syncbat::operation] does not support unsafe functions
 --> tests/ui/operation_macro_unsafe_fn.rs:9:1
  |
9 | unsafe fn echo(_input: &[u8], _cx: &mut syncbat::Cx<'_>) -> syncbat::HandlerResult {
  | ^^^^^^
